--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -8,5 +8,6 @@ Welcome to the main wiki page for Ampache Mobile this is intended to be the plac
 
 
 == Setup Help ==
- * WindowsServerHelp
- 
+ *  [WindowsAmpacheServer Windows Installation Guide]
+ *  [MacintoshOSXAmpacheServerGuide Mac Installation Guide]
+ *  [http://ampache.org/wiki/install Other Operating Systems (linux, bsd) 
