Edited wiki page through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,4 +1,4 @@
 #summary Main Sidebar for Wiki
 [MainPage MainPage]
- Ampache Server Setup
+ *Ampache Server Setup*
  [WindowsAmpacheServer Windows Setup]
