--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,4 +1,5 @@
 #summary Main Sidebar for Wiki
-[MainPage MainPage]
- *Ampache Server Setup*
- [WindowsAmpacheServer Windows Setup]
+
+ * [MainPage MainPage]
+  * [AmpacheServerSetup Ampache Setup]
+   * [WindowsAmpacheServer Windows Setup]
