--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -6,8 +6,4 @@ Welcome to the main wiki page for Ampache Mobile this is intended to be the plac
 
 = Details =
 
-
-== Setup Help ==
- *  [WindowsAmpacheServer Windows Installation Guide]
- *  [MacintoshOSXAmpacheServerGuide Mac Installation Guide]
- *  [http://ampache.org/wiki/install Other Operating Systems (linux, bsd)] 
+[AmpacheServerSetup Ampache Server Setup Help]
