--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -1,4 +1,5 @@
 #summary Main wiki page
+#labels Featured
 = Introduction =
 
 Welcome to the main wiki page for Ampache Mobile this is intended to be the place you can go to get your questions answered regarding getting an Ampache Server and Ampache Mobile up and running so you can take advantage the amazing potential this combination holds. 
