Edited wiki page through web user interface.

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -8,5 +8,4 @@ Welcome to the main wiki page for Ampache Mobile this is intended to be the plac
 = Details =
 
 [AmpacheServerSetup Ampache Server Setup Help (This is in by no means complete yet)]
-[EVDOSetup Setup for use via EVDO]
-[FirewallPortForwardingDNS Firewall/PortForwarding/DNS]
+[ExternalAccess How to access your server from EVDO]
