--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,7 +1,7 @@
 #summary Main Sidebar for Wiki
 
-* [MainPage MainPage]
- * [AmpacheServerSetup Ampache Setup] 
+[MainPage MainPage]
+ [AmpacheServerSetup Ampache Setup] 
   * [WindowsAmpacheServer Windows Setup]
  * [ExternalAccessHelp EVDO Help]
     * [FirewallPortForwardingDNS Firewall/PortForwarding/DNS]
