Edited wiki page through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,6 +1,6 @@
 #summary Main Sidebar for Wiki
 
-* [MainPage MainPage]
+[MainPage MainPage]
  * [AmpacheServerSetup Ampache Setup] 
   * [WindowsAmpacheServer Windows Setup]
  * [ExternalAccessHelp EVDO Help]
