Edited wiki page through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -5,3 +5,12 @@
  * [WindowsAmpacheServer Windows Setup]
 * [ExternalAccessHelp EVDO Help]
  * [FirewallPortForwardingDNS Firewall PortForwarding DNS]
+
+ * [Articles HOWTO articles]
+    * [ArticlesXSS Web security]
+    * [ArticlesDom DOM manipulation]
+    * [ArticlesStyle CSS and style]
+    * [ArticlesTips Tips and tricks]
+  * [DOMReference DOM reference]
+  * [HTMLElements HTML reference]
+  * [CSSReference CSS reference]
