--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -1,10 +1,7 @@
 #summary Main Sidebar for Wiki
 
- * [Articles HOWTO articles]
-    * [ArticlesXSS Web security]
-    * [ArticlesDom DOM manipulation]
-    * [ArticlesStyle CSS and style]
-    * [ArticlesTips Tips and tricks]
-  * [DOMReference DOM reference]
-  * [HTMLElements HTML reference]
-  * [CSSReference CSS reference]
+ * [MainPage Home]
+  * [AmpacheServerSetup Ampache Setup] 
+   * [WindowsAmpacheServer Windows Setup]
+  * [ExternalAccessHelp EVDO Help]
+   * [FirewallPortForwardingDNS Firewall PortForwarding DNS]
