Edited wiki page through web user interface.

--- a/wiki/AmpacheMobileForWindows.wiki
+++ b/wiki/AmpacheMobileForWindows.wiki
@@ -1,3 +1,4 @@
+#summary Ampache Mobile for Windows Instructions
 ==Introduction==
 Want to try Ampache Mobile and don't actually have a WebOS phone.  Well now you can!!  WebOS is a combination Javascript, CSS and HTML.  It runs the WebKit browser (the same foundation that Safari and Google Chrome are built on).  The one missing piece to running a WebOS app on windows, or any other desktop operating system are the javascript and css libraries which palm created, otherwise known as the Mojo SDK.  If you can get the SDK on your PC then you can use it to run Ampache Mobile on your Windows computer.
 
