--- a/wiki/AmpacheMobileForWindows.wiki
+++ b/wiki/AmpacheMobileForWindows.wiki
@@ -6,7 +6,7 @@ http://i607.photobucket.com/albums/tt151/bjgeiser/windows.png?t=1253249742
 
 ==Installation==
   # Download and Install Safari for Windows (Only tested with Safari 4.0.2) [http://www.apple.com/safari link]
-  # Mojo Libraries (NOTE: Distribution of the SDK is not legal)
+  # Mojo Libraries (NOTE: Distribution of the Mojo Framework is not legal)
     * You are going to have to find this on your own
     * [http://forums.precentral.net/web-os-development/185038-develop-pre-apps-safari-without-sdk.html PreCentral Thread on this Topic]
   # Run the Ampache Mobile for Windows executable [http://code.google.com/p/ampache-mobile/downloads/list link]
