--- a/wiki/Safari4WindowsDebugMode.wiki
+++ b/wiki/Safari4WindowsDebugMode.wiki
@@ -11,4 +11,7 @@ Safari 4 on Windows
 <key>IncludeDebugMenu</key>
 <integer>1</integer>
 }}}
-2) Put the modified text to end of the %ProgramFiles%\Safari\Safari.resources\Defaults.plist right before the </dict> closing tag.
+2) 
+{{{
+Put the modified text to end of the %ProgramFiles%\Safari\Safari.resources\Defaults.plist right before the </dict> closing tag.
+}}}
