--- a/trunk/CHANGES
+++ b/trunk/CHANGES
@@ -1,18 +1,19 @@
 Version 0.0.5 (Beta) ()
-	* New Feature: Dynamic resizing of now playing screen. Meaning support for the Palm Pixi.  Resizing during notifications. ect.
-	* New Feature: Global Search, should vastly improve performance if you know what you are looking for.
-	* New Feature: Landscape Mode (Rotation) Default:Off  
-	* New Feature: Per/Account Settings for fine tuning of performance (Recommended Usage: Make 2 accounts, one for a fast connection and one for a slow)
+	* New Feature: (Global Search) should vastly improve performance if you know what you are looking for.
+	* New Feature: (Dynamic Resizing) Dynamic resizing of now playing screen. Meaning support for the Palm Pixi.  Resizing during notifications. ect.
+	* New Feature: (Rotation) Landscape Mode (Rotation) Default:Off  
+	* New Feature: (Performance Tuning) Per/Account Settings for fine tuning of performance (Recommended Usage: Make 2 accounts, one for a fast connection and one for a slow)
 	      o Fetch Size: Change how many items are downloaded at once from the server. Default: 300 items.  Recommended higher number for fast connection, lower number for slow connection.
 		  o Album/Artist Art: Moved this setting from system wide to account specific. 
-	* New Feature: Clickable Links in Songs list for Search, Playlists.
+	* New Feature: (Quick Links) Clickable Links in Songs list for Search, Playlists.
+	* New Feature: (Sorting) Albums List is now Sortable thru App Menu current sorting choices are Alphabetical, Year, Artist.  Choice is saved.
 	* Improvement: Partially loaded lists will start loading where they left off, upon navigating back to them.
-	* Improvement: Complete rewrite of underlying code that drives list loading, should be faster/less buggy.
+	* Improvement: Complete rewrite of underlying code that drives list loading, should be faster && less buggy.
 	* Improvement: Icons in list headers
 	* Bug Fix: Play/Pause with Palm Headphones restarted track.  Works as expected now.
 	* Bug Fix: Fixed filtering while loading on Albums and Artists.  If you attempted to filter the list while it was loading the filter would not apply to newly downloaded items.  This is now resolved.
 	* Bug Fix: Fixed Ping so that it only pings as often as it needs to.  Previously pinged every 1 minute.  Should save on battery.
-	* Bug Fix: Auto size background to fit available screen, choosing a part of a bigger image as the background isn't going to happen.
+	* Bug Fix: Auto size background to fit available screen, choosing a part of a bigger image as the background isn't going to happen with current API.
 	
 Version 0.0.4 (Beta)(09/13/2009)
 
