Edited wiki page through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -3,5 +3,4 @@
  * [MainPage Home]
   * [AmpacheServerSetup Ampache Setup] 
    * [WindowsAmpacheServer Windows Setup]
-  * [ExternalAccessHelp EVDO Help]
-   * [FirewallPortForwardingDNS Firewall PortForwarding DNS]
+   * [CommonIssues Common Issues]
