--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -6,7 +6,13 @@
     * A 192.168.x.x/10.x.x.x/172.16.x.x address is Internal and not accessible via EVDO
     * To find your external address try this link [http://www.whatismyip.com/]
   * Once you determine your internal address and external IP address you need to setup port forwarding on your router.
-    * Your goal is to forward your External IP address to your Internal Ampache Server address.
+    * Your goal is to forward your External IP address to your Internal Ampache Server address. Imagine that your router is a large building with 100's of doors. 
+        * Each door has a unique "port number". 
+        * Each door opens onto a hallway that goes to an unique suite with the same "port number". (i.e. Suite 80)
+        * The Ampache server by default is occupying suite 80, office 192.168.x.x. (where 192.168.x.x is the private IP address of the Ampache server)
+        * Some ISPs block door 80...they install a lock on the outside of the door and you cannot unlock it 
+        * To get around this, you open up another door...as an example door 8080. At the same time you build a hallway in the building so anyone coming in on door 8080 is automatically directed to suite 80, office 192.168.x.x .
+    
     * [http://www.portforward.com/routers.htm This site] has a ton of port forwarding guides, most webservers default to running on port 80.  But you can choose any port you like as long as your configure your web server as such. 
   * Could be an ACL issue. Ampache uses Access Control Lists to restrict access to the music server (see http://ampache.org/wiki/config:acl). You will need to create a an ACL rule for EVDO access
      * Go to the Ampache Admin page
