--- a/wiki/CommonIssues.wiki
+++ b/wiki/CommonIssues.wiki
@@ -1,6 +1,15 @@
 #summary Some pointers for common issues encountered while setting up ampache
 =Common Issues=
 
+=== Ampache-mobile doesn't work ===
+   * If Ampache-mobile run's OK on your pre, but you are unable to connect to your music server, use the test below to help you figure out why Ampache-mobile isn't working.
+        # Can you access Ampache from the machine it is running on (i.e http://localhost)?  If no, then it looks like your Ampache music server is not working yet.
+        # Can you access Ampache from another machine on your network (i.e. http://192.168.x.x) ? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an Ampache Server ACL rule. 
+           * See this [http://www.ehow.com/how_2317017_turn-off-firewalls-computer.html page] on "how to turn off your firewall".
+           * Check out this [http://ampache.org/wiki/config:acl page] on Ampache ACL rules  
+        # Can you access Ampache via Wifi from your Pre using the web browser (i.e. http://192.168.x.x)? If no, it could be a firewall issue on the machine running the Amapche music server or maybe an ACL rule. See links above.
+        # Can you access Ampache via Wifi from your Pre using Ampache-mobile?
+    * You may want to go through the steps above before posting a "Ampache-mobile isn't working" post and then posting which of the above steps worked for you and which didn't. 
 === Works on Wi-Fi but not EVDO ===
   * Are you connecting to a private network address IP Address like 192.168.x.x  or 10.x.x.x or 172.16.x.x?  Most Wi-Fi routers have an internal IP pool and one External IP.  
     * A 192.168.x.x/10.x.x.x/172.16.x.x address is Internal and not accessible via EVDO
